matener avance en redimencionamiento

--- a/ejemplo/basico/basico.html
+++ b/ejemplo/basico/basico.html
@@ -32,7 +32,7 @@
 				<li><span>Autor:</span> Ing. Jose Manuel Santibañez Villanueva</li>
 				<li><span>E-mail:</span> jmsv23@gmail.com</li>
 				<li><span>Github:</span> <a href="https://github.com/jmsv23">https://github.com/jmsv23</a></li>
-				<li><span>Licencia:</span> MIT</li>
+				<li><span>Licencia:</span> GNU GPL V3</li>
 			</ul>
 		</footer>
 		<!--insertar los scripts antes del cierre de la etiqueta body es una buena practica al usar javascript y es bueno para el performance al cargar la pagina ya que carga todo el contenido antes de intentar cargar los escript-->
